src/main/resources/web/themes/default/view-collectionlisting.css
 /* Introduction */

 div.vrtx-introduction {
   margin:0;
   padding:0 0 0.5em 0;
}

 /* Picture without picture text */

 img.vrtx-introduction-image {
   float: right;
   margin: 0 0 0.5em 0.75em;
   border:1px solid #ddd; 
/*   max-width: 300px; 
   width: expression(this.width > 300 ? 300: true); */
 }

 /* Picture with picture text */

 div.vrtx-introduction-image {
   border:1px solid #ddd; 
   float: right;
   margin: 0em 0em 0.5em 0.75em;
 }

 div.vrtx-introduction-image img {
 }

 div.vrtx-introduction-image div.vrtx-imagetext {
   overflow: hidden;
   padding: 0.5em; 
   background-color: #eee;
 }

 div.vrtx-introduction-image div.vrtx-imagetext span.vrtx-imagetitle{
   font-weight: bold;
 }


/* collections */

div.vrtx-collections {
  clear: right;
  border: 1px solid #ccc;
  padding: 1em;
  height: 1%; /* Triggers hasLayout in IE browser */
  margin: 0 0 1.5em 0;
}

/* div.vrtx-collections:after {
  content: "."; 
  display: block; 
  height: 0; 
  clear: both; 
  visibility: hidden;
} */

div.vrtx-collections table {
  width:100%;
}

div.vrtx-collections table tr {
  vertical-align: top;
}

div.vrtx-collections h2 {
  margin: 0 0 .5em 0;
  font-size: 1.2em;
}

div.vrtx-collections ul {
  list-style-type: square;
  margin-top: 0;
  margin-bottom: 0;
}


/* START vrtx-resource (standard, article, events) */
div.vrtx-resource {
   width: 100%;
   float: left; 
   padding: 0;
   margin: 0 0 1.25em 0; 
}

div.eventListing\.upcomingEventsSearchComponent h2,
div.eventListing\.previousEventsSearchComponent h2 {
  float:left;
  padding:0;
}

div.eventListing\.upcomingEventsSearchComponent h2 {
  margin: 0em 0 .5em 0;
}

div.eventListing\.previousEventsSearchComponent h2 {
  margin: .5em 0 .5em 0;
}

div.vrtx-resource a.vrtx-title{
   font-size: 1.2em; 
   font-weight: 900;
}

div.articleListing\.searchComponent a.vrtx-title,
div.eventListing\.upcomingEventsSearchComponent a.vrtx-title,
div.eventListing\.previousEventsSearchComponent a.vrtx-title {
   text-decoration: none;
   color: black;
}

div.articleListing\.searchComponent a.vrtx-title:hover,
div.eventListing\.upcomingEventsSearchComponent a.vrtx-title:hover,
div.eventListing\.previousEventsSearchComponent a.vrtx-title:hover {
   color: #999;
}

div.vrtx-resource img {
   float:left;
   padding: 0.25em 0.75em 0.5em 0;
   border: none;
}

div.vrtx-resource div.lastModified,
div.vrtx-resource div.published-date,
div.vrtx-resource div.time-and-place {
   padding: 0;
   margin: .5em 0 0 0;
}

div.vrtx-resource div.introduction {
  padding: 0;
  margin: 0; 
}

div.vrtx-resource div.introduction p{
   margin: .5em 0 0 0;
   padding: 0; 
}

div.vrtx-resource a.more { 
  margin: .5em 0 0 0;
  display:block;
  white-space: nowrap;
  width: 1%;
}


/* events */
abbr { 
  text-decoration: none;
  border-bottom: 0 !important;
}

/* END vrtx-resource (standard, article, events) */

/* next / previous links */

a.vrtx-next, a.vrtx-previous {
  float:left;
  margin: 0 .5em 1em 0;
}


/* RSS - stuff */
div.vrtx-feed-link {
  clear:both;
  background: url(rss-icon.jpg) no-repeat top left;
  font-size: .9em;
  height: 24px;
  line-height: 20px;

}

div.vrtx-feed-link a {
  padding-left: 27px;

}

.clear {
  display: block;
  content: ".";
  height: 0;
  visibility: hidden;
  clear: both;
}

